--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.cache*
 
 npm-debug.log*
 yarn-debug.log*
@@ -25,3 +26,6 @@ yarn-error.log*
 # firebase
 /.firebase*
 .firebaserc
+
+# env
+.env*
