--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sass": "^2.1.4",
     "gatsby-source-contentful": "^2.1.18",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-moment": "^0.9.2",
     "react-scripts": "3.0.1",
     "sass": "^1.22.9"
   },
