--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.2",
     "react-scripts": "3.0.1",
+    "react-youtube": "^7.9.0",
     "sass": "^1.22.9"
   },
   "scripts": {
