--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "react-router-dom": "latest",
     "contentful": "^7.9.1",
     "dotenv": "^8.0.0",
     "gatsby": "^2.13.53",
     "gatsby-image": "^2.2.8",
+    "gatsby-plugin-google-analytics": "^2.1.8",
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-postcss-sass": "^1.0.22",
     "gatsby-plugin-react-helmet": "^3.1.3",
@@ -25,6 +25,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.2",
+    "react-router-dom": "latest",
     "react-scripts": "3.0.1",
     "react-youtube": "^7.9.0",
     "sass": "^1.22.9"
