--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-postcss-sass": "^1.0.22",
     "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-recaptcha": "^1.0.5",
     "gatsby-plugin-sass": "^2.1.4",
     "gatsby-source-contentful": "^2.1.18",
     "moment": "^2.24.0",
@@ -25,6 +26,8 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-moment": "^0.9.2",
+    "react-protected-mailto": "^1.0.3",
+    "react-recaptcha": "^2.3.10",
     "react-router-dom": "latest",
     "react-scripts": "3.0.1",
     "react-youtube": "^7.9.0",
