--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 - node
 script:
 - yarn install
-- yarn add -g firebase-tools
+- npm i -g firebase-tools
 - gatsby build
 - firebase deploy --token $FIREBASE_TOKEN
 notifications:
