--- a/package.json
+++ b/package.json
@@ -8,16 +8,27 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@contentful/rich-text-react-renderer": "^13.4.0",
+    "@zeit/next-sass": "^1.0.1",
+    "apollo-boost": "^0.4.4",
+    "contentful": "^7.11.0",
+    "firebase": "^7.3.0",
+    "graphql": "^14.5.8",
     "isomorphic-unfetch": "3.0.0",
+    "moment": "^2.24.0",
     "next": "latest",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1"
+    "node-sass": "^4.13.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-instafeed": "^1.0.0"
   },
   "devDependencies": {
-    "@types/node": "^12.7.8",
-    "@types/react": "^16.9.3",
+    "@types/node": "^12.7.12",
+    "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
-    "typescript": "3.6.3"
+    "styled-jsx-plugin-sass": "^1.0.0",
+    "typescript": "^3.6.4"
   },
   "license": "ISC"
 }
