--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "node-sass": "^4.13.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-instafeed": "^1.0.0"
+    "react-instafeed": "^1.0.0",
+    "react-protected-mailto": "^1.0.3",
+    "sass-loader": "^8.0.0"
   },
   "devDependencies": {
     "@types/node": "^12.7.12",
