--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^12.7.12",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "styled-jsx-plugin-sass": "^1.0.0",
     "typescript": "^3.6.4"
   },
