--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-instafeed": "^1.0.0",
     "react-protected-mailto": "^1.0.3",
     "react-youtube": "^7.9.0",
-    "sass-loader": "^8.0.0"
+    "sass-loader": "^8.0.0",
+    "styled-jsx": "^3.2.4"
   },
   "devDependencies": {
     "@types/node": "^12.7.12",
